--- a/addons/google-docs/src/app/app.component.html
+++ b/addons/google-docs/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
+  <app-help></app-help>
   <h1>
     Welcome to {{ title }}!
   </h1>
